@@ -1,3 +1,7 @@
+2004-02-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* actors.cc: paint NPCs translucently to prevent palette-cycling
+	* shapes/shapevga.cc: removed Spark-translucency hack
+
 2004-02-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* desktop/*: put .desktop file in /usr/share/applications,
 	icon in /usr/share/icons.
